--- a/submission/Dockerfile
+++ b/submission/Dockerfile
@@ -28,21 +28,22 @@ USER appuser
 SHELL ["/bin/bash", "-c"]
 
 # Making the appropate directories for the inference code, inputs, and outputs
-RUN mkdir -p ~/code/xview-2/
-RUN mkdir -p ~/submission/ 
-RUN mkdir -p ~/output/ 
+RUN mkdir -p /home/appuser/code/xview-2/
+RUN mkdir -p /home/appuser/submission/ 
+RUN mkdir -p /home/appuser/output/ 
 
 RUN pip3 install numpy
 RUN pip3 install -U "tensorflow==1.*"
 RUN pip3 install matplotlib tqdm libtiff scipy Pillow scikit-image opencv-python imgaug IPython geopandas keras imantics simplification scikit-learn chainer tensorboard tensorboardX
 
 #ADD xview-2 /code/xview-2/
-RUN git clone https://github.com/cambrio/xview2-baseline-debug.git ~/code/xview-2
+RUN git clone https://github.com/cambrio/xview2-baseline-debug.git /home/appuser/code/xview-2
+RUN echo "v032 (to force hash mismatch)"
 
 # Grabbing weights for our models
 # UNCOMMENT THIS WHEN REPO/WEIGHTS ARE PUBLIC
-RUN curl -L https://github.com/DIUx-xView/xView2/releases/download/v1.0/localization.h5 -o ~/code/xview-2/weights/localization.h5
-RUN curl -L https://github.com/DIUx-xView/xView2/releases/download/v1.0/classification.hdf5 -o ~/code/xview-2/weights/classification.hdf5
+RUN curl -L https://github.com/DIUx-xView/xView2/releases/download/v1.0/localization.h5 -o /home/appuser/code/xview-2/weights/localization.h5
+RUN curl -L https://github.com/DIUx-xView/xView2/releases/download/v1.0/classification.hdf5 -o /home/appuser/code/xview-2/weights/classification.hdf5
 
 # Finally running the container with the run.sh wrapper script to pass the CLI arguments to inference.sh
 #RUN chmod +x ~/code/xview-2/submission/run.sh
