dan incremental sync: mon at 1120

--- a/submission/Dockerfile
+++ b/submission/Dockerfile
@@ -42,7 +42,7 @@ RUN echo "v032 (to force hash mismatch)"
 
 # Grabbing weights for our models
 # UNCOMMENT THIS WHEN REPO/WEIGHTS ARE PUBLIC
-RUN curl -L https://github.com/DIUx-xView/xView2/releases/download/v1.0/localization.h5 -o /home/appuser/code/xview-2/weights/localization.h5
+#RUN curl -L https://github.com/DIUx-xView/xView2/releases/download/v1.0/localization.h5 -o /home/appuser/code/xview-2/weights/localization.h5
 RUN curl -L https://github.com/DIUx-xView/xView2/releases/download/v1.0/classification.hdf5 -o /home/appuser/code/xview-2/weights/classification.hdf5
 
 # Finally running the container with the run.sh wrapper script to pass the CLI arguments to inference.sh
